# attest

./: Makefile  Makefile.am  README.md  config.status  configure.ac  whatever.proto
docs/: zmqProtoInstall.docx  ~$qProtoInstall.docx
src/: clientMain.cpp  serverMain.cpp
src/component1/: comp1.cpp  comp1.hpp
src/component2/: comp2.cpp  comp2.hpp
src/pb2/: sentMessage.proto
